# mathread

./: .agents  .ai-review-ci.toml  .gitignore  AGENTS.md  justfile  package.json  pyproject.toml  tsconfig.json
.github/workflows/: review-pr.yml
.pr/: PR_BODY.md  REVIEW_DISPOSITIONS.md  REVIEW_LOG.md  triage_state.json
extension/: build.ts  manifest.json  package.ts  pdf-launch.css  pdf-launch.html
extension/mathread/: background.ts  capture-client.ts  capture-ui.css  capture-ui.ts  link-origin.ts  options.html  options.ts  pdf-launch.ts  reader-swap.ts  settings.ts  takeover.ts
extension/poc/: annotations.ts  backend.ts  reader.css  reader.html  reader.js
extension/reader/: annotations.ts  backend.ts  clip.tsx  highlights.tsx  library.html  notes-module.tsx  overlay-main.tsx  overlay.tsx  pdf-viewer.d.ts  print.d.ts  print.js  reader.css  reader.html  reader.js
plans/: data-integrity-plan.md  data-integrity-prepass.md
src/mathread/: __main__.py  capture.py  cli.py  library.py  metadata.py  models.py  naming.py  portal.py  (+1 more)
tests/: annotations.test.ts  arxiv-features.test.ts  browser-helpers.ts  extension-boundary-cases.ts  extension-boundary.test.ts  extension-capture-boundary.test.ts  extension-clip-boundary.test.ts  extension-jbig2-rendering.test.ts  extension-numdam-rendering.test.ts  extension-overlay-boundary.test.ts  extension-reader-boundary.test.ts  extension-rendering-boundary.test.ts  extension-shim.test.ts  notes-module.test.tsx  overlay-dismiss.test.tsx  preview-math.test.tsx  print-module.test.ts  test-logger.ts  test_capture.py  test_portal.py
(+18 files in other folders)
