[project]
name = "mathread"
version = "1.0.0"
description = "Local provenance-first PDF capture service for mathematical reading"
requires-python = ">=3.14"
dependencies = [
    "cyclopts>=3.24.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pathvalidate>=3.3.1",
    "pikepdf>=10.0.0",
    "pydantic>=2.12.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]

[project.scripts]
mathread = "mathread.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
